         RT #6706 (Torgny.Hofstedt@sevenlevels.se)
         ditto re-bind to a device.

       Internals
       - $ip is now a hash with {addr, addr_in, family} not the addr_in packed IP.
       - added _resolv replacing inet_aton,
         _pack_sockaddr_in and _unpack_sockaddr_in replacing sockaddr_in,
         _inet_ntoa replacing inet_ntoa
       - added several new tests (Steve Peters)

2.43  Mon Apr 29 00:23:56 2013 -0300
        version in perl core since 5.19.9
        Bugfixes
        - Handle getprotobyn{ame,umber} not being available
2.42  Sun May 26 19:08:46 2013 -0700
        version in perl core since 5.19.1
        Bugfixes
        - Stabilize tests
       Internals
        - wrap long pod lines
2.41  Mar 17 09:35 2013
        Bugfixes
        - Windows Vista does not appear to support inet_ntop().  It seems to
          have InetNtop() instead.  So, working around by using getnameinfo()
          and passing in the NI_NUMERICHOST to get an IP address.
        Features
        - Change Net::Ping to use Time::HiRes::time() instead of CORE::time()
          by default.  For most successful cases, CORE::time() returned zero. 
2.40  Mar 15 11:20 2013
        Bugfixes
        - several fixes to tests to stop the black smoke on Win32's 
          and Cygwin since the core updated the module to Test::More.
          I had planned a later release, but all the black smoke is
          forcing a release.
        - fixes to some skips in tests that were still using the 
          Test style skip's.
        - Documentation fix for https://rt.cpan.org/Ticket/Display.html?id=48014.
          Thanks to Keith Taylor <keith@supanet.net.uk>
        - Instead of using a hard-coded TOS value, import IP_TOS from 
          Socket.  This fixes an outstanding bug on Solaris which uses a 
          different value for IP_TOS in it headers than Linux.  I'm assuming
          other OS's were fixed with this change as well.

        Features