@@ -19,11 +19,7 @@ BEGIN {use_ok('Net::Ping')};
 
 SKIP: {
   skip "icmp ping requires root privileges.", 1
-    if ($> and $^O ne 'VMS' and $^O ne 'cygwin')
-      or (($^O eq 'MSWin32' or $^O eq 'cygwin')
-    and !IsAdminUser())
-  or ($^O eq 'VMS'
-      and (`write sys\$output f\$privilege("SYSPRV")` =~ m/FALSE/));
+    unless &Net::Ping::_isroot;
   my $p = new Net::Ping ("icmp",undef,undef,undef,undef,undef);
   isa_ok($p, 'Net::Ping');
   ok $p->ping("127.0.0.1");
@@ -43,11 +39,4 @@ SKIP: {
   $p = new Net::Ping ("icmp",undef,undef,undef,undef,10);
   ok $p->ping("127.0.0.1");
   $p->close();
-}
-
-sub IsAdminUser {
-  return unless $^O eq 'MSWin32' or $^O eq "cygwin";
-  return unless eval { require Win32 };
-  return unless defined &Win32::IsAdminUser;
-  return Win32::IsAdminUser();
 }
